WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246568
There is some 'captial' typo in the source tree
https://bugs.webkit.org/show_bug.cgi?id=246568
Summary
There is some 'captial' typo in the source tree
addr2line
Reported
2022-10-15 01:02:34 PDT
There is some 'captial' typo in the source tree. To reproduce: $ rg 'captial' . ./Websites/browserbench.org/Speedometer/resources/todomvc/architecture-examples/emberjs/bower_components/ember/ember.js 1964: paths (i.e. a path beginning with a captial letter not defined on the ./Tools/Scripts/webkitpy/style/checkers/cpp.py 233: # Next add underscores when you have a captial letter which is followed by a capital letter ./LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/text-transform.html 18: { syntax: 'captialize' }, ./Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm 3590: if (focusedElement->document().quirks().shouldSuppressAutocorrectionAndAutocaptializationInHiddenEditableAreas() && isTransparentOrFullyClipped(*focusedElement)) { ./Source/WebCore/page/Quirks.h 91: WEBCORE_EXPORT bool shouldSuppressAutocorrectionAndAutocaptializationInHiddenEditableAreas() const; ./Source/WebCore/page/Quirks.cpp 340:static bool shouldSuppressAutocorrectionAndAutocaptializationInHiddenEditableAreasForHost(StringView host) 396:bool Quirks::shouldSuppressAutocorrectionAndAutocaptializationInHiddenEditableAreas() const 401: return shouldSuppressAutocorrectionAndAutocaptializationInHiddenEditableAreasForHost(m_document->topDocument().url().host()); As far as I can tell, this is a typo. version: commit 674e736be80335b302b90e9ea7316a8a7da191a1
Attachments
Add attachment
proposed patch, testcase, etc.
addr2line
Comment 1
2022-10-15 18:14:57 PDT
I want to fix the typo, but I'm not sure what is the right way to submit the patch. Make a pull request on github or just submit the patch file in the `Attachments`?
Tim Nguyen (:ntim)
Comment 2
2022-10-16 15:29:00 PDT
(In reply to addr2line from
comment #1
)
> I want to fix the typo, but I'm not sure what is the right way to submit the > patch. Make a pull request on github or just submit the patch file in the > `Attachments`?
https://webkit.org/contributing-code/
has all the instructions to submit a Github PR. In your case you can skip step 4.
Radar WebKit Bug Importer
Comment 3
2022-10-22 01:03:20 PDT
<
rdar://problem/101455951
>
Aditya Keerthi
Comment 4
2022-11-09 17:11:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6326
EWS
Comment 5
2022-11-09 19:08:57 PST
Committed
256518@main
(c4dbc0c634fc): <
https://commits.webkit.org/256518@main
> Reviewed commits have been landed. Closing PR #6326 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug