Fix 'captial' typos in the tree https://bugs.webkit.org/show_bug.cgi?id=246568 rdar://101455951

Reviewed by Tim Nguyen.

* Source/WebCore/page/Quirks.cpp:
(WebCore::shouldSuppressAutocorrectionAndAutocapitalizationInHiddenEditableAreasForHost):
(WebCore::Quirks::shouldSuppressAutocorrectionAndAutocapitalizationInHiddenEditableAreas const):
(WebCore::shouldSuppressAutocorrectionAndAutocaptializationInHiddenEditableAreasForHost): Deleted.
(WebCore::Quirks::shouldSuppressAutocorrectionAndAutocaptializationInHiddenEditableAreas const): Deleted.
* Source/WebCore/page/Quirks.h:
* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
* Tools/Scripts/webkitpy/style/checkers/cpp.py:
(_convert_to_lower_with_underscores):

Canonical link: https://commits.webkit.org/256518@main